; ModuleID = '/home/carl/AnghaBench/ios-webkit-debug-proxy/src/extr_sha1.c_sha1.c'
source_filename = "/home/carl/AnghaBench/ios-webkit-debug-proxy/src/extr_sha1.c_sha1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sha1(i8* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = call i32 @sha1_starts(i32* %7)
  %9 = load i8*, i8** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = call i32 @sha1_update(i32* %7, i8* %9, i64 %10)
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @sha1_finish(i32* %7, i8* %12)
  %14 = call i32 @memset(i32* %7, i32 0, i32 4)
  ret void
}

declare dso_local i32 @sha1_starts(i32*) #1

declare dso_local i32 @sha1_update(i32*, i8*, i64) #1

declare dso_local i32 @sha1_finish(i32*, i8*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
